--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "express-jwt-authz": "^2.4.1",
+    "jwks-rsa": "^2.0.4",
     "mongoose": "^6.0.3",
     "nodemon": "^2.0.12",
     "request": "^2.88.2"
